- Fixed bug #45562 (Creating instance of DatePeriod crashes).